fix icon alignment and layout, add contact links on home page

--- a/builds/development/styles/style.less
+++ b/builds/development/styles/style.less
@@ -20,6 +20,11 @@ body {
   padding: 10px;
 }
 
+.contact-container {
+  padding-right: 30px;
+  margin-left: -20px;
+}
+
 .space-top {
   padding-top: 50px;
 }
