--- a/builds/development/styles/styles.css
+++ b/builds/development/styles/styles.css
@@ -14,6 +14,10 @@ body {
 .fat {
   padding: 10px;
 }
+.contact-container {
+  padding-right: 30px;
+  margin-left: -20px;
+}
 .space-top {
   padding-top: 50px;
 }
